/*
 * $Id: ChangeLog,v 1.1325 2003/08/05 10:20:48 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-08-05 16:41 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/vm/fm.c
    * added code for initializing allocated memory with 
      static complex HB_ITEM. This code is compiled when
      macro HB_PARANOID_MEM_CHECK is set and there is no
      macro HB_FM_STATISTICS_OFF
  * xharbour/xharbour.spec
  * xharbour/make_tgz.sh
    * libfm (fm.o with memory statistic) is compiled with
      HB_PARANOID_MEM_CHECK macro

2003-08-05 03:19 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/cstr.prg
    * Commented leftout TraceLog()

  * source/vm/classes.c
    + Added: __clsGetIVarNamesAndValues( oObject [, nScope] ) -> Array of sub arrays of Ivar-Name and Value.

  * source/rtl/objfunc.prg
    ! Fixed __ObjGetValueDiff() and __ObjGetDerivedDiff() to use new __clsGetIVarNamesAndValues()
      instead of

  * source/vm/garbage.c
    * Minor formating.

  * source/vm/hvm.c
    + Added logic to generate an Error if HB_MAX_ENUMERATIONS is reached.
    + Added logic to generate an Error if HB_MAX_WITH_OBJECTS is reached.
      /* This may catch a possible GPF. */

2003-08-03 04:47 UTC+2000 Giancarlo Niccolai <gian@niccolai.ws>
  * source/vm/thread.c
    ! uiCurrentArea was initialized to 0 (while it must be initialized to 1).

2003-02-02 17:40 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
 * doc/en/files.txt
  * Added doc for HB_OsPathSeparator(),HB_OsPathListSeparator(),HB_OsPathDelimiters()

2003-02-02 15:10 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * doc/hblog.txt
    doc/hbi18n.txt
    * Formated to be processed by hbdoc
 * doc/genhtm.rsp
    + hblog.txt and hbi18n.txt dependencies added
 * utils/hbdoc/rtf.prg
   utils/hbdoc/hbdoc.prg
    ! minor fix
